project/logs/20250516_051934.log
Use Adapter : NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create DeD12Device!!!

Begin CompileShader, path:Object3D.VS.hlsl, profile:vs_6_0

Object3D.VS.hlsl:18:5: error: unknown type name 'Vector32_t4'
    Vector32_t4 color;
    ^
Object3D.VS.hlsl:19:5: error: unknown type name 'Vector32_t3'
    Vector32_t3 direction;
    ^
Object3D.VS.hlsl:27:50: error: use of undeclared identifier 'float322_t3x3'
    output.normal = normalize(mul(input.normal, (float322_t3x3) gTransformationMatrix.World));
                                                 ^

